syntax = "proto3";

package pictophone.messages;

message CreateGameRequest {
    string game_id = 1;
    string player_id = 2;
}

message CreateGameResponse {
    oneof error {
        UnknownError unknown_error = 1;
        GameAlreadyExistsError game_already_exists_error = 2;
    }
}

message JoinGameRequest {
    string game_id = 1;
    string player_id = 2;
}

message JoinGameResponse {
    oneof error {
        UnknownError unknown_error = 1;
        GameNotFoundError game_not_found_error = 2;
        GameAlreadyStartedError game_already_started_error = 3;
    }
}

message StartGameRequest {
    string game_id = 1;
    string player_id = 2;

    uint32 window_size = 3;
    uint32 length = 4;
}

message StartGameResponse {
    oneof error {
        UnknownError unknown_error = 1;
        PlayerNotInGameError player_not_in_game_error = 2;
        InvalidGameParametersError invalid_game_parameters_error = 3;
        GameAlreadyStartedError game_already_started_error = 4;
    }
}

message MakeMoveRequest {
    string game_id = 1;
    string player_id = 2;
    string sentence = 3;
}

message MakeMoveResponse {
    oneof error {
        UnknownError unknown_error = 1;
        NotYourTurnError not_your_turn_error = 2;
        GameNotStartedError game_not_started_error = 3;
        GameAlreadyOverError game_already_over_error = 4;
    }
}

message GetGameRequest {
    string game_id = 1;
    string player_id = 2;
}

message GetGameResponse {
    oneof error {
        UnknownError unknown_error = 1;
        PlayerNotInGameError player_not_in_game_error = 2;
    }

    Game game = 3;
}

message Game {
    repeated string player_ids = 1;

    message Unstarted {}
    message YourTurn {
        repeated string context = 1;
    }
    message NotYourTurn {}
    message GameOver {
        repeated string sentences = 1;
    }

    oneof state {
        Unstarted unstarted = 2;
        YourTurn your_turn = 3;
        NotYourTurn not_your_turn = 4;
        GameOver game_over = 5;
    }
}

// Errors
// ======
message UnknownError {
    string error = 1;
}

message GameAlreadyExistsError {}
message InvalidGameParametersError {}
message NotYourTurnError {}

message GameAlreadyStartedError {}
message GameAlreadyOverError {}

message GameNotStartedError {}

message GameNotFoundError {}

message PlayerNotInGameError {}

message MoveAbortedError {}

message EmptyHandError {}
